[package]
name = "logAnalyser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version = "0.4.39", features = ["serde"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
sysinfo = "0.33.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }

[profile.release]
debug = 1
