[package]
name = "logAnalyser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sysinfo = "0.33.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
clap = { version = "4.5.30", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }

[profile.release]
debug = 1
